# rpp_labs

./: CMakeLists.txt  merge_mpi.cpp  merge_openmp.cpp  merge_seq.cpp
